--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   get: ^4.6.5
   dots_indicator: ^3.0.0
   flutter_svg: ^2.0.7
+  google_maps_flutter: ^2.4.0
+  location: ^5.0.2+1
 
 
 dev_dependencies:
