--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   google_maps_flutter: ^2.4.0
   location: ^5.0.2+1
   country_code_picker: ^3.0.0
+  image_picker: ^1.0.2
+
 
 
 dev_dependencies:
