--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   location: ^5.0.2+1
   country_code_picker: ^3.0.0
   image_picker: ^1.0.2
+  flutter_launcher_icons: ^0.13.1
 
 
 
